objects/Member__c.object
<CustomObject>
    <description>The members for the application.</description>
    <fields>
        <fullName>AIM__c</fullName>
        <label>AIM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Range__c</fullName>
        <label>Age Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>14-20</fullName>
                </value>
                <value>
                    <fullName>21-30</fullName>
                </value>
                <value>
                    <fullName>31-40</fullName>
                </value>
                <value>
                    <fullName>41-60</fullName>
                </value>
                <value>
                    <fullName>60 +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Challenges_Entered__c</fullName>
        <description>Total number of challenges entered.</description>
        <label>Challenges Entered</label>
        <summaryForeignKey>Challenge_Participant__c.Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Challenges_Lost__c</fullName>
        <description>Total number of challenges lost.</description>
        <label>Challenges Lost</label>
        <summaryFilterItems>
            <field>Challenge_Participant__c.Status__c</field>
            <operation>equals</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Challenge_Participant__c.Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Challenges_Submitted__c</fullName>
        <description>Total number of challenges submitted.</description>
        <label>Challenges Submitted</label>
        <summaryFilterItems>
            <field>Challenge_Participant__c.Status__c</field>
            <operation>equals</operation>
            <value>Submitted, Lost, Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Challenge_Participant__c.Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Challenges_Won__c</fullName>
        <description>Total number of challenges won.</description>
        <label>Challenges Won</label>
        <summaryFilterItems>
            <field>Challenge_Participant__c.Status__c</field>
            <operation>equals</operation>
            <value>Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Challenge_Participant__c.Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digg__c</fullName>
        <label>Digg</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Github__c</fullName>
        <label>Github</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICQ__c</fullName>
        <label>ICQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jabber__c</fullName>
        <label>Jabber</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MySpace__c</fullName>
        <label>MySpace</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Home__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Mobile__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Work__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <label>Referral</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The SFDC user associated to the member.</description>
        <inlineHelpText>The SFDC user associated to the member.</inlineHelpText>
        <label>SFDC User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School /  University</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shirt_Size__c</fullName>
        <label>Shirt Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M-small</fullName>
                </value>
                <value>
                    <fullName>M-medium</fullName>
                </value>
                <value>
                    <fullName>M-large</fullName>
                </value>
                <value>
                    <fullName>M-x-large</fullName>
                </value>
                <value>
                    <fullName>W-small</fullName>
                </value>
                <value>
                    <fullName>W-medium</fullName>
                </value>
                <value>
                    <fullName>W-large</fullName>
                </value>
                <value>
                    <fullName>W-x-large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Bio__c</fullName>
        <label>Summary / Bio</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern Time (US &amp; Canada) -- (GMT-05:00)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_1st_Place__c</fullName>
        <description>Number of 1st place challenges.</description>
        <label># of 1st Places</label>
        <summaryFilterItems>
            <field>Challenge_Participant__c.Place__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Challenge_Participant__c.Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_2nd_Place__c</fullName>
        <description>Number of 2nd place challenges.</description>
        <label># of 2nd Places</label>
        <summaryFilterItems>
            <field>Challenge_Participant__c.Place__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>Challenge_Participant__c.Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_3st_Place__c</fullName>
        <description>Number of 3rd place challenges.</description>
        <label># of 3rd Places</label>
        <summaryFilterItems>
            <field>Challenge_Participant__c.Place__c</field>
            <operation>equals</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryForeignKey>Challenge_Participant__c.Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Badges__c</fullName>
        <description>Total number of badges.</description>
        <label>Total Badges</label>
        <summaryForeignKey>Member_Badge__c.Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Money__c</fullName>
        <description>The total amount of money won by the member.</description>
        <label>Total Money</label>
        <summarizedField>Challenge_Participant__c.Money_Awarded__c</summarizedField>
        <summaryForeignKey>Challenge_Participant__c.Member__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <description>The total points awarded for all challenges.</description>
        <label>Total Points</label>
        <summarizedField>Challenge_Participant__c.Points_Awarded__c</summarizedField>
        <summaryForeignKey>Challenge_Participant__c.Member__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Username set as external id sent via integration with SQL.</inlineHelpText>
        <label>Username (ext)</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website / Blog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Work_Status__c</fullName>
        <label>Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Prefer Not To Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yahoo__c</fullName>
        <label>Yahoo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>ZIP</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Challenges_Entered__c</columns>
        <columns>Challenges_Won__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Last_Login__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_Members_Today</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Challenges_Entered__c</columns>
        <columns>Challenges_Submitted__c</columns>
        <columns>Country__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New Members Today</label>
    </listViews>
    <nameField>
        <label>Username</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>